<?xml version="1.0" encoding="utf-8"?>
<!--
    * Name: Joseph Overbeck
    * Professor: Dr. Moghtanei
    * Class: CS211D
    * Assignment: 05
    * Fun Fact: Ants cannot be seriously injured from impact
    * with the ground after being dropped from any height,
    * because they simply don't have enough mass!
    -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".QuizSplashScreen">

    <TextView
        android:id="@+id/title"
        android:text="@string/app_name"
        android:textSize="40dp"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/nameInput"
        android:layout_marginTop="40dp"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/title"/>
    <Button
        android:id="@+id/startGame"
        android:text="@string/play"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/nameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/scoreScreen"
        android:text="@string/scores"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/startGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</RelativeLayout>
