<?xml version="1.0" encoding="utf-8"?>
<!--
    * Name: Joseph Overbeck
    * Professor: Dr. Moghtanei
    * Class: CS211D
    * Assignment: 05
    * Fun Fact: Ants cannot be seriously injured from impact
    * with the ground after being dropped from any height,
    * because they simply don't have enough mass!
    -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.cs211d.joverbeck.quizotron.scoreScreen">

    <TextView
        android:text="@string/highscores"
        android:id="@+id/scoretitle"
        android:textSize="30dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/score1"
        android:layout_below="@id/scoretitle"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/score2"
        android:layout_below="@id/score1"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/score3"
        android:layout_below="@id/score2"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/score4"
        android:layout_below="@id/score3"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/score5"
        android:layout_below="@id/score4"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/score6"
        android:layout_below="@id/score5"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/score7"
        android:layout_below="@id/score6"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/score8"
        android:layout_below="@id/score7"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/score9"
        android:layout_below="@id/score8"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/score10"
        android:layout_below="@id/score9"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/curScore"
        android:text="@string/currentScore"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/score10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/curScoreActual"
        android:layout_below="@id/score10"
        android:layout_toRightOf="@id/curScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/goToStart"
        android:text="@string/goToSplash"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/curScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</RelativeLayout>

