<?xml version="1.0" encoding="utf-8"?>
<!--
    * Name: Joseph Overbeck
    * Professor: Dr. Moghtanei
    * Class: CS211D
    * Assignment: 05
    * Fun Fact: Ants cannot be seriously injured from impact
    * with the ground after being dropped from any height,
    * because they simply don't have enough mass!
    -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:orientation="vertical"
                tools:context="com.cs211d.joverbeck.quizotron.gameScreen">
    <TextView
        android:id="@+id/score"
        android:layout_gravity="right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:id="@+id/question1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/question1text"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="50dp"/>
        <RadioGroup
            android:id="@+id/answerGroup1"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/state"
                android:text="@string/state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:id="@+id/capital"
                android:text="@string/capitol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RadioGroup>
        <Button
            android:id="@+id/question1button"
            android:text="@string/submit"
            android:enabled="false"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/question2"
        android:layout_marginTop="50dp"
        android:visibility="invisible"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/question2Text"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="50dp"/>
        <RadioGroup
            android:id="@+id/answerGroup2"
            android:layout_below="@+id/question2Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/choice1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:id="@+id/choice2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:id="@+id/choice3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:id="@+id/choice4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            </RadioGroup>
        <Button
            android:id="@+id/question2button"
            android:text="@string/submit"
            android:enabled="false"
            android:layout_below="@+id/answerGroup2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        </RelativeLayout>
</LinearLayout>
